Allow testing a local jcifs-ng JAR before publication
Add an explicit jcifsNgJar Gradle property that replaces the published dependency while retaining its public dependencies. Document building and testing the adaptive-credit library with 1 MiB playback refills. Keep nova9 as the default until a new library version is published.